# propulate

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE.txt  README.md  README.rst  RELEASE.md  codecov.yml  in_case_of_update.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  voucher_propulate.txt
.figs/: logo_HelmholtzAI.eps
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: fair-software.yml  post-coverage.yml  python-publish.yml  python-test.yml
ap-pso/: particle.py  swarm.py
ap_pso/: __init__.py  optimizer.py  particle.py  swarm.py  utils.py
ap_pso/bm/: bm_all.sh  bm_all_weak.sh  bm_hyppopy.sh  bm_init.sh  bm_propulate.sh  bm_starter.sh  graph_plotter.py  hyppopy_benchmark.py  pso_benchmark.py  torch_benchmark.py
ap_pso/bm/recovery/: start_rc_1.sh  start_rc_3.sh
ap_pso/bm/results/: bm_propulate.sh  graph_plotter.py  graph_plotter_H.py
ap_pso/propagators/: __init__.py  basic_pso.py  canonical.py  constriction.py  propagator.py  pso_compose.py  pso_init_uniform.py  stateless_pso.py  velocity_clamping.py
ap_pso/scripts/: pso_example.py  pso_example.sh
docs/: Makefile  algos_explained.rst  bayesian_optimizer.rst  cmaes.rst  conf.py  eas.rst  easexplained.rst  index.rst  install.rst  island_model.rst  nm.rst  overview_pop.rst  parallel_pop.rst  pop.rst  pso.rst  quickstart.rst  requirements.txt  tut_bayesopt.rst  tut_ddp.rst  tut_hpo.rst  tut_islands.rst  tut_multi_rank_worker.html  tut_multi_rank_worker.rst  tut_propulator.rst  tut_surrogate.rst  usage.rst
docs/_static/css/: custom.css
docs/autoapi/: index.rst
propulate/: README.md  __init__.py  _globals.py  coordinator.py  islands.py  migrator.py  particle.py  pollinator.py  population.py  propagators.py  propulator.py  propulator_pollination.py  setup.cfg  surrogate.py  utils.py  wrapper.py
propulate/.github/workflows/: python-publish.yml
propulate/population/: __init__.py  particle.py
propulate/propagators/: __init__.py  base.py  bayesopt.py  cmaes.py  ga.py  init_propagators.py  nm.py  propagators.py  pso.py  pso_propagator.py
propulate/propagators/pso/: __init__.py  basic.py  basic_pso.py  canonical.py  compose.py  constriction.py  init_uniform.py  pso_compose.py  pso_init_uniform.py  stateless.py  stateless_pso.py  velocity_clamping.py
propulate/utils/: __init__.py  benchmark_functions.py  consistency_checks.py
scripts/: 0_pop_cpt.p  0_pop_cpt.p.bkp  0pop_cpt.p  0pop_cpt.p.bkp  1_pop_cpt.p  1_pop_cpt.p.bkp  1pop_cpt.p  1pop_cpt.p.bkp  Untitled.ipynb  benchmark.py  checkpoint_example.py  cma_es_benchmark.py  example.py  function_benchmark.py  islands_example.py  isle_0_pop_cpt.p  isle_0_pop_cpt.p.bkp  isle_1_pop_cpt.p  isle_1_pop_cpt.p.bkp  large_example.py  large_surrogate_synch.py  mpi_output_redirect.sh  no_spawn_example.py  parallel_test_filter.sh  pop_cpt.p  pop_cpt.p.bkp  propulator_example.py  pso_example.py  run_cma_benchmark.py  run_cma_benchmark.sh  simple_example.py  stdout  stdoutö  torch_example.py  torch_wrapper.py  wrapper_example.py
src/propulate/: __init__.py  _globals.py  coordinator.py  population.py  propagators.py  propulator.py  utils.py
tests/: conftest.py  dummy_test.py  test_bayesian_optimizer.py  test_bayesian_optimizer_mixed_types.py  test_checkpointing.py  test_cmaes.py  test_island.py  test_multi_rank_workers.py  test_nm.py  test_population.py  test_propulator.py  test_propulator_sphere.py  test_pso.py  test_surrogate.py  test_utils.py
tutorials/: bayesian_optimizer_example.py  cmaes_example.py  function_benchmark.py  islands_example.py  minimum_working_example.py  multi_rank_workers_example.py  nm_example.py  nm_reference.py  propulator_example.py  pso_example.py  simple_example.py  surrogate_example.py  torch_ddp_example.py  torch_example.py
tutorials/surrogate/: __init__.py  cifar10_example.py  default_surrogate.py  dynamic_surrogate.py  log_surrogate.py  mnist_example.py  mock_surrogate.py  requirements.txt  static_surrogate.py
